<resources>
    <string name="toast_crash">OpenCPN Crash</string>
    <string name="crash_toast_text">Ooooops ! OpenCPN crashed, but a report is being prepared to send to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">OpenCPN has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
        application to stop. Please help us fix this by sending us error data.
        All you have to do is click OK, and choose your email client to mail the resulting report.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="ocpn_CANCEL">Cancel</string>
    <string name="ocpn_CHOOSE_ITEM_COLOR">Choose OpenCPN item color</string>
    <string name="DOWNLOADING_FILE">Downloading file…</string>
    <string name="PREPARING_GRIB">Preparing GRIB file…</string>
    <string name="DEFAULT">Default</string>
    <string name="CUSTOM">Custom</string>
    <string name="ocpn_GRIB_activity_Display">GRIB Display Settings</string>
    <string name="ocpn_GRIB_activity_Choose">Choose local GRIB file</string>
    <string name="ocpn_GRIB_activity_Request">Request new GRIB file download</string>
    <string name="ocpn_GRIB_download_dialog_Request">Request GRIB Download...</string>
    <string name="ocpn_GRIB_download_dialog_OK">GRIB file downloaded OK</string>
    <string name="ocpn_GRIB_download_dialog_NO_INTERNET">No Internet available\n Please check your device Mobile Data or WiFi settings.</string>
    <string name="ocpn_GRIB_download_dialog_NO_CONNECTION">Connection Failed</string>
    <string name="ocpn_GRIB_download_dialog_DOWN_FAIL">Download Failed\n Please check logs.</string>
    <string name="ocpn_action_follow">Auto-Follow Boat</string>
    <string name="ocpn_action_mob">Mark Man Overboard</string>
    <string name="ocpn_action_routemanager">Show Route Manager</string>
    <string name="ocpn_action_tracktoggle_on">Start tracking</string>
    <string name="ocpn_action_tracktoggle_off">Stop tracking</string>
    <string name="ocpn_action_createroute">Create a new route</string>
    <string name="ocpn_action_endroute">Finish new route</string>
    <string name="ocpn_action_tides">Show/Hide Tides</string>
    <string name="ocpn_action_currents">Show/Hide Currents</string>
    <string name="ocpn_action_settings_basic">OpenCPN Settings</string>
    <string name="ocpn_action_encText">Toggle ENC text</string>
    <string name="ocpn_action_encSoundings">Toggle ENC soundings</string>
    <string name="ocpn_action_encLights">Toggle ENC lights</string>
    <string name="ocpn_action_googlemaps">Switch to Google Maps</string>
    <string name="ocpn_action_toggle_fullscreen">Toggle Fullscreen</string>
    <string name="ocpn_action_filemanager">File Manager</string>
    <string name="ocpn_prefs_header_display">Display</string>
    <string name="ocpn_prefs_header_charts">Charts</string>
    <string name="ocpn_prefs_header_connections">Connections</string>
    <string name="ocpn_prefs_header_summary_display">Chart display options</string>
    <string name="ocpn_prefs_header_summary_charts">Chart sources and options</string>
    <string name="ocpn_prefs_header_summary_connections">GPS/AIS location options</string>
    <string name="ocpn_prefs_display_navigation_mode">Navigation Mode</string>
    <string name="ocpn_prefs_display_lookahead_mode">Look Ahead mode</string>
    <string name="ocpn_prefs_display_enablequilt">Enable Chart Quilting</string>
    <string name="ocpn_prefs_display_showgrid">Show Grid</string>
    <string name="ocpn_prefs_display_showoutlines">Show Chart Outlines</string>
    <string name="ocpn_prefs_display_lockwaypoints">Lock Waypoints</string>
    <string name="ocpn_prefs_display_confirmdelete">Confirm Delete Actions</string>
    <string name="ocpn_prefs_display_showdepthunits">Show Depth Units</string>
    <string name="ocpn_prefs_display_uiscalefactor">User Interface Scale Factor</string>
    <string name="ocpn_prefs_display_chartscalefactor">Chart Display Scale Factor</string>
    <string name="ocpn_prefs_display_expertmode">Expert Mode</string>
    <string name="ocpn_prefs_display_summary_nav_mode">Show more of the chart ahead of the ship\'s course</string>
    <string name="ocpn_prefs_display_summary_quilt">Display multiple charts at your location</string>
    <string name="ocpn_prefs_display_summary_grid">Show Latitude/Longitude grid overlay</string>
    <string name="ocpn_prefs_display_summary_outlines">Individual chart outlines shown as constrasting overlay</string>
    <string name="ocpn_prefs_display_summary_lockwpt">Unless Property Dialog is shown</string>
    <string name="ocpn_prefs_display_summary_confirmdelete">On Routes and Tracks</string>
    <string name="ocpn_prefs_display_summary_depthunits">Depth units displayed as emboss on chart surface</string>
    <string name="ocpn_prefs_display_summary_uiscalefactor">Affects toolbars, dialogs, and GUI fonts.</string>
    <string name="ocpn_prefs_display_summary_chartscalefactor">Affects chart objects like marks, buoys, text, etc.</string>
    <string name="ocpn_prefs_display_summary_expertmode">Showing toolbar and extended menus</string>
    <string name="ocpn_prefs_display_navigation_mode_NU">North Up</string>
    <string name="ocpn_prefs_display_navigation_mode_CU">Course Up</string>
    <string name="ocpn_prefs_display_nosleep">Do not sleep</string>
    <string name="ocpn_prefs_display_summary_nosleep">...while OpenCPN is active</string>
    <string name="ocpn_prefs_charts_files">Chart Files</string>
    <string name="ocpn_prefs_charts_vectorchartsettings">Vector Chart Settings</string>
    <string name="ocpn_prefs_charts_summary_chartfiles">Configure Installed Charts</string>
    <string name="ocpn_prefs_charts_summary_vectorchartsettings">Set Vector Chart Display Options</string>
    <string name="ocpn_prefs_charts_negative">No</string>
    <string name="ocpn_prefs_charts_positive">OK</string>
    <string name="ocpn_prefs_charts_vectordisplaycat">Display Category</string>
    <string name="ocpn_prefs_charts_vectordisplaygraphstyle">Chart Graphics Style</string>
    <string name="ocpn_prefs_charts_vectordisplayareaboundstyle">Chart Area Boundary Style</string>
    <string name="ocpn_prefs_charts_vectordisplaychartcolors">Chart Colors</string>
    <string name="ocpn_prefs_charts_vectordisplaycategory_Base">Base</string>
    <string name="ocpn_prefs_charts_vectordisplaycategory_Standard">Standard</string>
    <string name="ocpn_prefs_charts_vectordisplaycategory_All">All</string>
    <string name="ocpn_prefs_charts_vectordisplaycategory_Marinerstandard">Mariner Standard</string>
    <string name="ocpn_prefs_charts_vectordisplaylinestyle_Plain">Plain</string>
    <string name="ocpn_prefs_charts_vectordisplaylinestyle_Symbol">Symbolized</string>
    <string name="ocpn_prefs_charts_vectordisplaygraphstyle_Paper">Paper Chart</string>
    <string name="ocpn_prefs_charts_vectordisplaygraphstyle_Simple">Simplified</string>
    <string name="ocpn_prefs_charts_vectordisplaycolors_2">2 Colors</string>
    <string name="ocpn_prefs_charts_vectordisplaycolors_4">4 Colors</string>
    <string name="ocpn_prefs_charts_vectorshowsound">Show Depth Soundings</string>
    <string name="ocpn_prefs_charts_vectorshowlabel">Show Buoy and Light Labels</string>
    <string name="ocpn_prefs_charts_vectorshowdescrip">Show Light Descriptions</string>
    <string name="ocpn_prefs_charts_vectorshowimportant">Show Important Text Only</string>
    <string name="ocpn_prefs_charts_vectorshowreduced">Show Reduced Detail at Small Scale</string>
    <string name="ocpn_prefs_charts_vectorshallowdepth">Shallow Depth</string>
    <string name="ocpn_prefs_charts_vectorsafetydepth">Safety Depth</string>
    <string name="ocpn_prefs_charts_vectordeepdepth">Deep Depth</string>
    <string name="ocpn_prefs_conn_internal">Internal GPS Receiver</string>
    <string name="ocpn_prefs_conn_prolificPL203">Prolific PL2303</string>
    <string name="ocpn_prefs_conn_daisy">dAISy AIS Receiver</string>
    <string name="ocpn_prefs_conn_FT232R">FTDI FT232R</string>
    <string name="ocpn_prefs_conn_FT231X">FTDI FT231X</string>
    <string name="ocpn_prefs_conn_continuous">Enable continuous GPS tracking</string>
    <string name="ocpn_prefs_conn_summary_internal">Activate GPS to enable this choice.</string>
    <string name="ocpn_prefs_conn_summary_compatible">   or compatible GPS receiver</string>
    <string name="ocpn_prefs_conn_summary_continuous">   ...even while paused/asleep</string>
    <string name="ocpn_prefs_conn_detected">Detected USB Device</string>
    <string name="ocpn_grib_display_head_general">General</string>
    <string name="ocpn_grib_display_head_wind">Wind</string>
    <string name="ocpn_grib_display_head_pressure">Pressure</string>
    <string name="ocpn_grib_display_head_windgust">Wind Gust</string>
    <string name="ocpn_grib_display_head_waves">Wave Height/Direction</string>
    <string name="ocpn_grib_display_head_current">Current</string>
    <string name="ocpn_grib_display_head_rain">Rainfall</string>
    <string name="ocpn_grib_display_head_cloud">Cloudcover</string>
    <string name="ocpn_grib_display_head_airtemp">Air temperature</string>
    <string name="ocpn_grib_display_head_seatemp">Sea temperature</string>
    <string name="ocpn_grib_display_head_cape">CAPE</string>
    <string name="ocpn_grib_display_head_summary_general">Set General Display Options</string>
    <string name="ocpn_grib_display_head_summary_wind">Set Wind Display Options</string>
    <string name="ocpn_grib_display_head_summary_pressure">Set Pressure Display Options</string>
    <string name="ocpn_grib_display_head_summary_windgust">Set Wind Gust Display Options</string>
    <string name="ocpn_grib_display_head_summary_waves">Set Wave Display Options</string>
    <string name="ocpn_grib_display_head_summary_current">Set Current Display Options</string>
    <string name="ocpn_grib_display_head_summary_rain">Set Rainfall Display Options</string>
    <string name="ocpn_grib_display_head_summary_cloud">Set Cloudcover Display Options</string>
    <string name="ocpn_grib_display_head_summary_airtemp">Set Air Temperature Display Options</string>
    <string name="ocpn_grib_display_head_summary_seatemp">Set Sea Temperature Display Options</string>
    <string name="ocpn_grib_display_head_summary_cape">Set CAPE Display Options</string>
    <string name="ocpn_grib_download_model"><b>Model</b></string>
    <string name="ocpn_grib_download_timestep">Time step</string>
    <string name="ocpn_grib_download_days"><b>Days</b></string>
    <string name="ocpn_grib_download_cat_general">General</string>
    <string name="ocpn_grib_download_cat_temestep">Time Step</string>
    <string name="ocpn_grib_download_item_wind">Wind</string>
    <string name="ocpn_grib_download_item_pressure">Pressure</string>
    <string name="ocpn_grib_download_item_windgust">WindGust</string>
    <string name="ocpn_grib_download_item_rain">Rainfall</string>
    <string name="ocpn_grib_download_item_cloud">CloudCover</string>
    <string name="ocpn_grib_download_item_airtemp">AirTemperature</string>
    <string name="ocpn_grib_download_item_cape">CAPE</string>
    <string name="ocpn_grib_download_cat_waves">Waves</string>
    <string name="ocpn_grib_download_item_waves">Waves</string>
    <string name="ocpn_grib_download_cat_sea">Sea</string>
    <string name="ocpn_grib_download_item_current">Current</string>
    <string name="ocpn_grib_download_item_seatemp">SeaTemperature</string>
    <string name="ocpn_grib_download_summary_model">Select GRIB forecast model</string>
    <string name="ocpn_grib_download_summary_timestep">Set the time interval between forecasts</string>
    <string name="ocpn_grib_download_summary_days">Set the number of days in GRIB</string>
</resources>