<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ocpn="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/ocpn_action_follow"
          android:icon="@drawable/follow"
          android:title="@string/ocpn_action_follow"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_follow_active"
          android:icon="@drawable/follow_active"
          android:title="@string/ocpn_action_follow"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_follow_active_green"
          android:icon="@drawable/follow_active_green"
          android:title="@string/ocpn_action_follow"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_follow_active_blue"
          android:icon="@drawable/follow_active_blue"
          android:title="@string/ocpn_action_follow"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_routemanager"
          android:icon="@drawable/route_manager"
          android:title="@string/ocpn_action_routemanager"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_track_toggle_ison"
          android:icon="@drawable/trackon"
          android:title="@string/ocpn_action_tracktoggle_off"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_track_toggle_isoff"
          android:icon="@drawable/trackoff"
          android:title="@string/ocpn_action_tracktoggle_on"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_createroute"
          android:icon="@drawable/route"
          android:title="@string/ocpn_action_createroute"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_route_create_active"
          android:icon="@drawable/route_active"
          android:title="@string/ocpn_action_endroute"
          android:visible="false"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_encText"
          android:icon="@drawable/text"
          android:title="@string/ocpn_action_encText"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_encSoundings"
          android:icon="@drawable/text"
          android:title="@string/ocpn_action_encSoundings"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_encLights"
          android:icon="@drawable/text"
          android:title="@string/ocpn_action_encLights"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_tides"
          android:icon="@drawable/tide"
          android:title="@string/ocpn_action_tides"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_currents"
          android:icon="@drawable/current"
          android:title="@string/ocpn_action_currents"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_mob"
          android:icon="@drawable/mob_btn"
          android:title="@string/ocpn_action_mob"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_googlemaps"
          android:icon="@drawable/current"
          android:title="@string/ocpn_action_googlemaps"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_filemanager"
          android:icon="@drawable/current"
          android:title="@string/ocpn_action_filemanager"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_toggle_fullscreen"
        android:icon="@drawable/current"
        android:title="@string/ocpn_action_toggle_fullscreen"
        ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_settings_basic"
          android:icon="@drawable/settings"
          android:title="@string/ocpn_action_settings_basic"
          ocpn:showAsAction="ifRoom"/>

    <item android:id="@+id/ocpn_action_email"
          android:icon="@drawable/settings"
          android:title="Send logs"
          ocpn:showAsAction="ifRoom"/>

 </menu>
